--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
-beautifulsoup4==4.5.1
 click==6.6
 Flask==0.11.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
-mercurial==4.0
-pbr==1.9.1
-six==1.10.0
-stevedore==1.12.0
-vboxapi==1.0
-virtualenv==15.0.1
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.1
+pymongo==3.3.1
 Werkzeug==0.11.11
